# slack-scim-rbac

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tasks.py  tox.ini
example/: README.md  kill.sh  requirements.txt  start.sh
example/rbacker/: app_data.py  app_errors.py  app_handlers.py  app_listeners.py  main.py
slack_rbac/: __init__.py  assert_rbac.py  middleware.py
slack_scim_rbac/: middleware.py
