[tool.poetry]
name = "slack-scim-rbac"
version = "0.1.0"
description = "Role Based Access Control for Slack-Bolt applications"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jeremyschulman/slack-scim-rbac"
authors = ["Jeremy Schulman"]

[tool.poetry.dependencies]
python = "^3.8"
slack-bolt = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.23.1"
invoke = "^1.5.0"
black = "^21.5b1"
flake8 = "^3.9.2"
flake8-breakpoint = "^1.1.0"
pytest-cov = "^2.12.0"
pre-commit = "^2.13.0"
interrogate = "^1.4.0"

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["setup.py", "tasks.py", "examples", "build", "venv"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
